--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= vestal_versions for Rails 3
+= vestal_versions for Rails 4
 
 Finally, DRY ActiveRecord versioning!
 
@@ -10,7 +10,7 @@ And that's just what <tt>vestal_versions</tt> does. Not only can a model be reve
 
 == Compatibility
 
-Tested with Active Record 3.0.3 with Ruby 1.8.7 and 1.9.2.
+Tested with Active Record 4.2 with Ruby 2.3.1.
 
 == Installation
 
